--- a/src/main/resources/public/template/faq/faqSearch.html
+++ b/src/main/resources/public/template/faq/faqSearch.html
@@ -4,14 +4,14 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       layout:decorator="layout/defaultLayout">
 <head>
-    <title th:text="#{menu.faq.parent}"></title>
+    <title th:text="#{faq.label.faq}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
     <div class="contents-list">
         <div class="page-title">
-            <h1 th:text="#{faq.label.list}"></h1>
-            <h6 class="title-description" th:text="#{faq.label.description}"></h6>
+            <h1 th:text="#{faq.label.faq}"></h1>
+            <h6 class="title-description" th:text="#{faq.msg.searchDescription}"></h6>
         </div>
         <div class="search-area">
             <div class="search-input">
