--- a/src/main/resources/public/template/faq/faqView.html
+++ b/src/main/resources/public/template/faq/faqView.html
@@ -4,7 +4,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorator="layout/defaultLayout">
 <head>
-    <title th:text="#{faq.label.detail}"></title>
+    <title th:text="#{faq.label.view}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
@@ -12,7 +12,7 @@
         <div class="header">
             <div class="page-title">
                 <h1 th:text="#{faq.label.faq}"></h1>
-                <h6 class="title-description" th:text="#{faq.label.description}"></h6>
+                <h6 class="title-description" th:text="#{faq.msg.viewDescription}"></h6>
             </div>
         </div>
         <div class="flex flex-column">
