--- a/src/main/resources/public/template/portal/faq/portalFaq.html
+++ b/src/main/resources/public/template/portal/faq/portalFaq.html
@@ -4,14 +4,14 @@
 	  xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	  layout:decorator="layout/portalLayout">
 <head>
-	<title th:text="#{menu.faq.parent}"></title>
+	<title th:text="#{faq.label.faq}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
 	<div class="faq-header">
 		<div class="header-title flex-row align-items-baseline">
-			<h1 th:text="#{faq.label.list}"></h1>
-			<h6 class="description" th:text="#{faq.label.description}"></h6>
+			<h1 th:text="#{faq.label.faq}"></h1>
+			<h6 class="description" th:text="#{faq.msg.portalDescription}"></h6>
 		</div>
 		<div class="faq-search">
 			<select id="groupCode" name="groupCode" onchange="getFaqList(this.value, '')" class="col-5">
