--- a/src/main/resources/public/template/download/downloadEdit.html
+++ b/src/main/resources/public/template/download/downloadEdit.html
@@ -3,7 +3,7 @@
     xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
     layout:decorator="layout/defaultLayout">
 <head>
-    <title th:text="#{download.label.download}"></title>
+    <title th:text="${download != null} ? #{download.label.edit} : #{download.label.register}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
@@ -11,7 +11,7 @@
         <div class="header">
             <div class="page-title">
                 <h1 th:text="#{download.label.download}"></h1>
-                <h6 class="title-description" th:text="#{download.msg.description}"></h6>
+                <h6 class="title-description" th:text="#{download.msg.editDescription}"></h6>
             </div>
         </div>
         <div class="edit">
