--- a/src/main/resources/public/template/download/downloadSearch.html
+++ b/src/main/resources/public/template/download/downloadSearch.html
@@ -4,14 +4,14 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       layout:decorator="layout/defaultLayout">
 <head>
-    <title th:text="#{menu.download.parent}"></title>
+    <title th:text="#{download.label.download}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
     <div class="contents-list">
         <div class="page-title">
-            <h1 th:text="#{download.label.list}"></h1>
-            <h6 class="title-description" th:text="#{download.msg.description}"></h6>
+            <h1 th:text="#{download.label.download}"></h1>
+            <h6 class="title-description" th:text="#{download.msg.searchDescription}"></h6>
         </div>
         <div class="search-area">
             <div class="search-input">
