--- a/src/main/resources/public/template/download/downloadView.html
+++ b/src/main/resources/public/template/download/downloadView.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       layout:decorator="layout/defaultLayout">
 <head>
-    <title th:text="#{download.label.download}"></title>
+    <title th:text="#{download.label.view}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
@@ -12,7 +12,7 @@
         <div class="header">
             <div class="page-title">
                 <h1 th:text="#{download.label.download}"></h1>
-                <h6 class="title-description" th:text="#{download.msg.portalDescription}"></h6>
+                <h6 class="title-description" th:text="#{download.msg.viewDescription}"></h6>
             </div>
         </div>
         <div class="flex flex-column">
