--- a/src/main/resources/public/template/portal/download/downloadSearch.html
+++ b/src/main/resources/public/template/portal/download/downloadSearch.html
@@ -4,13 +4,13 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       layout:decorator="layout/portalLayout">
 <head>
-    <title th:text="#{menu.download.parent}"></title>
+    <title th:text="#{download.label.download}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
     <div class="download-header">
         <div class="header-title flex-row align-items-baseline">
-            <h1 th:text="#{download.label.list}"></h1>
+            <h1 th:text="#{download.label.download}"></h1>
             <h6 class="description" th:text="#{download.msg.portalDescription}"></h6>
         </div>
         <div class="download-search">
