--- a/src/main/resources/public/template/portal/download/downloadView.html
+++ b/src/main/resources/public/template/portal/download/downloadView.html
@@ -4,14 +4,14 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       layout:decorator="layout/portalLayout">
 <head>
-    <title th:text="#{download.label.download}"></title>
+    <title th:text="#{download.label.view}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
     <div class="download-header">
         <div class="header-title flex-row align-items-baseline">
             <h1 th:text="#{download.label.download}"></h1>
-            <h6 class="description" th:text="#{download.msg.portalDescription}"></h6>
+            <h6 class="description" th:text="#{download.msg.viewDescription}"></h6>
         </div>
     </div>
     <div class="download-content">
