--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1044,42 +1044,7 @@ label {
   z-index: 1;
 }
 
-h1 {
-  color: #3F4B56;
-  font-size: 2.25rem;
-  font-weight: 700;
-  padding: 0.625rem 0 0.625rem 0.3125rem;
-}
-
-h2 {
-  color: #3F4B56;
-  font-size: 1.75rem;
-  font-weight: 500;
-}
-
-h3 {
-  color: #3F4B56;
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-h4 {
-  color: #3F4B56;
-  font-size: 1.125rem;
-  font-weight: 500;
-}
-
-h5 {
-  color: #586872;
-  font-size: 1rem;
-  font-weight: 400;
-}
-
 h6 {
-  color: #7E848C;
-  font-family: 맑은고딕;
-  font-size: 0.875rem;
-  font-weight: 400;
   padding: 0 0 0 0.625rem;
 }
 
@@ -1751,10 +1716,16 @@ button.ghost-line:disabled .icon {
   margin-left: 0.3125rem;
 }
 
-.btn.list-popup:focus, .btn.list-popup:hover,
-button.list-popup:focus,
-button.list-popup:hover {
-  background-color: #E1E3E6;
+.btn.btn-popup,
+button.btn-popup {
+  padding: 3.5px 5px;
+  margin: 0;
+}
+
+.btn.btn-popup:focus, .btn.btn-popup:hover,
+button.btn-popup:focus,
+button.btn-popup:hover {
+  background-color: #CCCED1;
 }
 
 .btn.plus,
@@ -1828,7 +1799,11 @@ button .icon-plus {
   background: #CCCED1;
 }
 
-.navigation {
+.gnb {
+  width: 13.75rem;
+}
+
+.gnb .navigation {
   width: 13.75rem;
   height: 9.375rem;
   background-color: #333D47;
@@ -1837,69 +1812,64 @@ button .icon-plus {
   z-index: 1000;
 }
 
-.navigation .breadcrumb {
+.gnb .navigation .breadcrumb {
   display: none;
 }
 
-.navigation-config .notification-count {
+.gnb .navigation-config .notification-count {
+  position: absolute;
+  font-size: 0.75rem;
+  font-weight: 700;
+  background-color: #929AA6;
   margin: 0.3125rem 1rem;
   padding: 0.125rem 0.625rem;
   border-radius: 1.25rem;
-  background-color: #929AA6;
-  font-size: 0.75rem;
-  font-weight: 700;
-  text-align: center;
-  position: absolute;
   line-height: inherit;
 }
 
-.navigation-config .notification.active .notification-round {
+.gnb .navigation-config .notification.active .notification-round {
   fill: #0098FF;
 }
 
-.navigation-config .notification.active .notification-bell {
+.gnb .navigation-config .notification.active .notification-bell {
   fill: #ffffff;
 }
 
-.navigation-config .notification.active .notification-count {
+.gnb .navigation-config .notification.active .notification-count {
   color: #ffffff;
   background-color: #0098FF;
 }
 
-.navigation-config .user-info {
+.gnb .navigation-config .user-info {
   height: 3.125rem;
-  display: flex;
-  align-items: center;
   padding: 0.6875rem 0 0.6875rem 1.3125rem;
 }
 
-.navigation-config .user-info .user-name {
+.gnb .navigation-config .user-info .user-name {
   color: #929AA6;
   font-weight: 500;
 }
 
-.navigation-config .user-info .user-profile {
+.gnb .navigation-config .user-info .user-profile {
+  display: inline-block;
   width: 1.688rem;
   height: 1.688rem;
   border-radius: 50%;
-  display: inline-block;
   vertical-align: middle;
   margin-right: 0.625rem;
 }
 
-.navigation-config .logout {
+.gnb .navigation-config .logout {
   height: 3.125rem;
-  align-items: center;
   padding: 0.6875rem 0 0.6875rem 1.3125rem;
 }
 
-.navigation-config .logout .btn-logout {
-  display: flex;
-  color: #929AA6;
+.gnb .navigation-config .logout .btn-logout {
   font-weight: 500;
+  color: #929AA6;
 }
 
-.navigation-config .logout .icon-logout {
+.gnb .navigation-config .logout .icon-logout {
   margin-right: 0.875rem;
   width: 1.6875rem;
   height: 1.6875rem;
@@ -1912,199 +1882,257 @@ button .icon-plus {
   background: #929AA6;
 }
 
-.navigation-config > div:hover {
+.gnb .navigation-config > div:hover {
   background: #283238;
 }
 
-.logo {
+.gnb .logo {
+  position: fixed;
   width: 13.75rem;
   height: 3.75rem;
   background-color: #333D47;
-  position: fixed;
   z-index: 1000;
   padding: 0.9375rem 1.25rem 0.9375rem 1.25rem;
 }
 
-.menu {
+.gnb .menu {
+  position: relative;
   width: 13.75rem;
   height: calc(100vh - 9.375rem - 3.75rem);
   background-color: #333D47;
-  position: relative;
-  left: 0;
   top: 3.75rem;
+  left: 0;
   z-index: 1000;
   overflow: auto;
 }
 
-.menu .right {
+.gnb .menu .right {
   right: 0.375rem;
 }
 
-.menu-area .gnb {
+.gnb .menu-area .gnb {
   padding: 0.9375rem 1.25rem 0.9375rem 1.25rem;
   vertical-align: middle;
 }
 
-.menu-area .gnb-area {
+.gnb .menu-area .gnb-area {
   line-height: 1.3;
   font-weight: 500;
 }
 
-.menu-area .gnb-area:first-child {
+.gnb .menu-area .gnb-area:first-child {
   margin-top: 0.3125rem;
 }
 
-.menu-area .gnb-area:hover {
+.gnb .menu-area .gnb-area:hover {
   background: #283238;
 }
 
-.menu-area .gnb-area .gnb-link {
-  display: flex;
+.gnb .menu-area .gnb-area .gnb-link {
   cursor: pointer;
 }
 
-.menu-area .gnb-area .gnb-link .menu-name {
-  padding-left: 1.1875rem;
+.gnb .menu-area .gnb-area .gnb-link .menu-name {
   display: inline-block;
-  color: #929AA6;
   font-weight: 500;
+  color: #929AA6;
   line-height: 1.3rem;
+  padding-left: 1.1875rem;
 }
 
-.menu-area .gnb-area .gnb-link .arrow-right {
-  padding: 0 0.375rem 0 0;
-  float: right;
+.gnb .menu-area .gnb-area .gnb-link .arrow-right {
   width: 0.75rem;
   height: 1.25rem;
-  margin-left: auto;
-  background: #929aa6;
-  mask-repeat: no-repeat;
-  mask-position: center center;
-  -webkit-mask: url("../media/icons/icon_arrow_left.svg") no-repeat center center;
+  -webkit-mask-image: url("../media/icons/icon_arrow_left.svg");
   mask-image: url("../media/icons/icon_arrow_left.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #929AA6;
+  float: right;
+  padding: 0 0.375rem 0 0;
+  margin-left: auto;
 }
 
-.menu-area .gnb-area .gnb-link .arrow-down {
-  padding: 0 0.375rem 0 0;
-  float: right;
+.gnb .menu-area .gnb-area .gnb-link .arrow-down {
   width: 0.75rem;
   height: 1.25rem;
-  margin-left: auto;
-  background: #929aa6;
-  mask-repeat: no-repeat;
-  mask-position: center center;
-  -webkit-mask: url("../media/icons/icon_arrow_bottom.svg") no-repeat center center;
+  -webkit-mask-image: url("../media/icons/icon_arrow_bottom.svg");
   mask-image: url("../media/icons/icon_arrow_bottom.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #929AA6;
+  float: right;
+  padding: 0 0.375rem 0 0;
+  margin-left: auto;
 }
 
-.menu-area .gnb-area .snb-group {
+.gnb .menu-area .gnb-area .snb-group {
   display: none;
 }
 
-.menu-area .gnb-area .snb-area {
+.gnb .menu-area .gnb-area .snb-area {
   font-size: 1rem;
-  color: #929AA6;
   font-weight: 400;
+  color: #929AA6;
 }
 
-.menu-area .gnb-area .snb-area .snb-link {
+.gnb .menu-area .gnb-area .snb-area .snb-link {
   display: block;
   cursor: pointer;
 }
 
-.menu-area .gnb-area .snb-area .snb-link .menu-name {
-  padding-left: 2.4375rem;
+.gnb .menu-area .gnb-area .snb-area .snb-link .menu-name {
   display: inline-block;
+  padding-left: 2.4375rem;
 }
 
-.menu-area .gnb-area .snb-area .snb-link.snb {
+.gnb .menu-area .gnb-area .snb-area .snb-link.snb {
   padding: 0.5rem 1.25rem 0.5rem 1.25rem;
   color: #929AA6;
 }
 
-.menu-area .gnb-area .snb-area .snb-link.active {
+.gnb .menu-area .gnb-area .snb-area .snb-link.active {
   background-color: #283238;
 }
 
-.menu-area .gnb-area .snb-area .snb-link.active .menu-name {
+.gnb .menu-area .gnb-area .snb-area .snb-link.active .menu-name {
   color: #ffffff;
 }
 
-.menu-area .gnb.active {
+.gnb .menu-area .gnb.active {
   background-color: #283238;
 }
 
-.menu-area .gnb.active .menu-name {
+.gnb .menu-area .gnb.active .menu-name {
   color: #ffffff;
 }
 
-.menu-area .gnb.active .icon-gnb {
+.gnb .menu-area .gnb.active .icon-gnb {
   background: #0098FF;
 }
 
-.menu-area .gnb.active-parent .menu-name {
+.gnb .menu-area .gnb.active-parent .menu-name {
   color: #ffffff;
 }
 
-.menu-area .gnb.active-parent .icon-gnb {
+.gnb .menu-area .gnb.active-parent .icon-gnb {
   background: #0098FF;
 }
 
-.menu-area .gnb.active-parent .arrow-right, .menu-area .gnb.active-parent .arrow-down {
+.gnb .menu-area .gnb.active-parent .arrow-right, .gnb .menu-area .gnb.active-parent .arrow-down {
   background: #ffffff;
 }
 
-.icon-gnb {
+.gnb .icon-gnb-board {
   width: 1.25rem;
   height: 1.25rem;
-  background: #929aa6;
-  mask-repeat: no-repeat;
-  mask-position: center center;
-}
-
-.icon-gnb-board {
-  -webkit-mask: url("../media/icons/gnb/icon_gnb_board.svg") no-repeat center center;
+  -webkit-mask-image: url("../media/icons/gnb/icon_gnb_board.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_board.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #929AA6;
 }
 
-.icon-gnb-dashboard {
-  -webkit-mask: url("../media/icons/gnb/icon_gnb_dashboard.svg") no-repeat center center;
+.gnb .icon-gnb-dashboard {
+  width: 1.25rem;
+  height: 1.25rem;
+  -webkit-mask-image: url("../media/icons/gnb/icon_gnb_dashboard.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_dashboard.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #929AA6;
 }
 
-.icon-gnb-document {
-  -webkit-mask: url("../media/icons/gnb/icon_gnb_document.svg") no-repeat center center;
+.gnb .icon-gnb-document {
+  width: 1.25rem;
+  height: 1.25rem;
+  -webkit-mask-image: url("../media/icons/gnb/icon_gnb_document.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_document.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #929AA6;
 }
 
-.icon-gnb-download {
-  -webkit-mask: url("../media/icons/gnb/icon_gnb_download.svg") no-repeat center center;
+.gnb .icon-gnb-download {
+  width: 1.25rem;
+  height: 1.25rem;
+  -webkit-mask-image: url("../media/icons/gnb/icon_gnb_download.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_download.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #929AA6;
 }
 
-.icon-gnb-faq {
-  -webkit-mask: url("../media/icons/gnb/icon_gnb_faq.svg") no-repeat center center;
+.gnb .icon-gnb-faq {
+  width: 1.25rem;
+  height: 1.25rem;
+  -webkit-mask-image: url("../media/icons/gnb/icon_gnb_faq.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_faq.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #929AA6;
 }
 
-.icon-gnb-notice {
-  -webkit-mask: url("../media/icons/gnb/icon_gnb_notice.svg") no-repeat center center;
+.gnb .icon-gnb-notice {
+  width: 1.25rem;
+  height: 1.25rem;
+  -webkit-mask-image: url("../media/icons/gnb/icon_gnb_notice.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_notice.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #929AA6;
 }
 
-.icon-gnb-config {
-  -webkit-mask: url("../media/icons/gnb/icon_gnb_config.svg") no-repeat center center;
+.gnb .icon-gnb-config {
+  width: 1.25rem;
+  height: 1.25rem;
+  -webkit-mask-image: url("../media/icons/gnb/icon_gnb_config.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_config.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #929AA6;
 }
 
-.icon-gnb-workflow {
-  -webkit-mask: url("../media/icons/gnb/icon_gnb_workflow.svg") no-repeat center center;
+.gnb .icon-gnb-workflow {
+  width: 1.25rem;
+  height: 1.25rem;
+  -webkit-mask-image: url("../media/icons/gnb/icon_gnb_workflow.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_workflow.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #929AA6;
 }
 
-.icon-gnb-token {
-  -webkit-mask: url("../media/icons/gnb/icon_gnb_token.svg") no-repeat center center;
+.gnb .icon-gnb-token {
+  width: 1.25rem;
+  height: 1.25rem;
+  -webkit-mask-image: url("../media/icons/gnb/icon_gnb_token.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_token.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #929AA6;
 }
 
 /* _layout.scss
@@ -2121,10 +2149,109 @@ button .icon-plus {
 }
 
 .itsm-container {
+  max-width: 120rem;
+  margin: 0 auto;
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
+}
+
+.itsm-container .main {
+  width: calc(100vw - 13.75rem);
+  height: 100vh;
+}
+
+.itsm-container .main .header-title {
+  padding: 1.563rem 0px 3.875rem 0px;
+}
+
+.itsm-container .main .header-title .description {
+  margin-left: 0.625rem;
+}
+
+.itsm-container .main .header-search {
+  padding: 0.3125rem 0px 1.875rem 0px;
+}
+
+.itsm-container .main .page-title {
+  display: flex;
+  align-items: baseline;
+}
+
+.itsm-container .main .page-title .title-description {
+  color: #7E848C;
+  font-family: 맑은고딕;
+  font-size: 0.875rem;
+  font-weight: 400;
+  padding-left: 0.625rem;
+}
+
+.itsm-container .main .list a, .itsm-container .main .list button {
+  cursor: pointer;
+}
+
+.itsm-container .main .list-table {
+  position: relative;
+  display: inline-table;
   width: 100%;
-  max-width: calc(100% - 13.75rem);
-  height: 100%;
-  min-height: 100vh;
+}
+
+.itsm-container .main .list-head tr {
+  height: 2.375rem;
+  border-bottom: 0.125rem solid #E1E3E6;
+}
+
+.itsm-container .main .list-head tr th {
+  font-size: 1.125rem;
+  font-weight: 500;
+  color: #3F4B56;
+  padding: 0 0.9375rem;
+}
+
+.itsm-container .main .list-head tr th:first-child {
+  padding-left: 1.25rem;
+}
+
+.itsm-container .main .list-body {
+  position: absolute;
+  width: 100%;
+  height: 32.69rem;
+}
+
+.itsm-container .main .list-body tr:hover {
+  background: #EBEBEB;
+}
+
+.itsm-container .main .list-body tr td {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #586872;
+  padding: 0 0.9375rem;
+}
+
+.itsm-container .main .list-body tr td:first-child {
+  padding-left: 1.25rem;
+}
+
+.itsm-container .main .list-body tr td a {
+  color: #586872;
+}
+
+.notice-header {
+  padding: 2.188rem 3.75rem 0 3.75rem;
+  background-color: #F7F8F9;
+}
+
+.notice-content {
+  padding: 0.9375rem 3.75rem;
+  background-color: #F7F8F9;
+}
+
+.notice-content .notice-pinned {
+  background-color: rgba(135, 206, 255, 0.15);
+}
+
+.itsm-container {
   /* _contents-token.scss
  *
  * 파일 경로 : contents/_contents-token.scss
@@ -2168,19 +2295,6 @@ button .icon-plus {
  * @author jy.lim
  * @version 1.0
  */
-}
-
-.itsm-container .page-title {
-  display: flex;
-  align-items: baseline;
-}
-
-.itsm-container .page-title .title-description {
-  color: #7E848C;
-  font-family: 맑은고딕;
-  font-size: 0.875rem;
-  font-weight: 400;
-  padding-left: 0.625rem;
 }
 
 .itsm-container .contents-token {
@@ -3301,10 +3415,6 @@ button .icon-plus {
 
 .no-data-found-list td {
   text-align: center;
-}
-
-.notice-pinned {
-  background-color: #87CEFF;
 }
 
 /* _alerts.scss 
@@ -5271,7 +5381,7 @@ body.modal-active {
   background-color: rgba(0, 152, 255, 0.05);
 }
 
-.thumbnail-main .thumbnail .thumbnail-img {
+.thumbnail-main .thumbnail .thumbnail-img, .thumbnail-main .thumbnail .thumbnail-file {
   display: inline-block;
   width: 100%;
   height: 9.063rem;
