--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -373,6 +373,30 @@ input, button, select, optgroup, textarea {
   margin-right: auto;
 }
 
+.mt-0 {
+  margin-top: 0;
+}
+
+.mt-1 {
+  margin-top: 0.3125rem;
+}
+
+.mt-2 {
+  margin-top: 0.625rem;
+}
+
+.mt-3 {
+  margin-top: 0.9375rem;
+}
+
+.mt-4 {
+  margin-top: 1.25rem;
+}
+
+.mt-auto {
+  margin-top: auto;
+}
+
 /* _common.scss 
  *
  * 파일 경로 : template/_common.scss
@@ -1650,6 +1674,11 @@ button.plus {
   padding: 0;
   width: 1.625rem;
   height: 1.625rem;
+}
+.btn.delete,
+button.delete {
+  padding: 0;
+  height: 2.5rem;
 }
 .btn .icon-search,
 button .icon-search {
