--- a/src/main/resources/public/src/scss/template/_columns.scss
+++ b/src/main/resources/public/src/scss/template/_columns.scss
@@ -47,3 +47,10 @@ $i: 1;
 .mr-3 { margin-right: 0.9375rem; } // 15px
 .mr-4 { margin-right: 1.25rem; }   // 20px
 .mr-auto { margin-right: auto; }
+
+.mt-0 { margin-top: 0; }
+.mt-1 { margin-top: 0.3125rem; } // 5px
+.mt-2 { margin-top: 0.625rem; }  // 10px
+.mt-3 { margin-top: 0.9375rem; } // 15px
+.mt-4 { margin-top: 1.25rem; }   // 20px
+.mt-auto { margin-top: auto; }
