--- a/src/main/resources/public/src/scss/theme/default/_buttons.scss
+++ b/src/main/resources/public/src/scss/theme/default/_buttons.scss
@@ -14,6 +14,11 @@ button {
     width: 1.625rem; // 26px
     height: 1.625rem; // 26px
   }
+  // CMDB Attribute 삭제 버튼
+  &.delete {
+    padding: 0;
+    height: 2.5rem; // 40px
+  }
   // + 버튼
   // 돋보기 아이콘
   .icon-search {
