--- a/src/main/resources/public/template/cmdb/attributeEdit.html
+++ b/src/main/resources/public/template/cmdb/attributeEdit.html
@@ -71,7 +71,23 @@
 </th:block>
 </body>
 <th:block layout:fragment="pageScript">
+    <script th:src="@{/assets/js/workflow/workflow.util.js}"></script>
+    <script th:src="@{/assets/js/cmdb/cmdb.core.js}"></script>
     <script th:src="@{/assets/js/cmdb/cmdb.attribute.js}"></script>
+    <script type="text/javascript">
+        (function() {
+            cmdb.initSession(JSON.stringify({
+                userKey : '[[${#authentication.details.userKey}]]',
+                userId : '[[${#authentication.details.userId}]]',
+                userName: '[[${#authentication.details.userName}]]',
+                email: '[[${#authentication.details.email}]]',
+                position: '[[${#authentication.details.position}]]',
+                department: '[[${#authentication.details.department}]]',
+                officeNumber: '[[${#authentication.details.officeNumber}]]',
+                mobileNumber: '[[${#authentication.details.mobileNumber}]]'
+            }));
+        })();
+    </script>
     <script type="text/javascript" th:inline="javascript">
         /*<![CDATA[*/
         const STATUS_SUCCESS = '0';
@@ -93,7 +109,7 @@
 
             // Attribute Details
             attribute.init(document.querySelector('#details'));
-            changeType(attributeTypeObject);
+            changeType(attributeTypeObject, true);
 
             aliceJs.initDesignedSelectTag();
 
@@ -110,8 +126,12 @@
             });
         };
 
-        function changeType(object) {
-            attribute.makeDetails(object.value, JSON.parse(attributeData));
+        function changeType(object, isInit) {
+            let data = null;
+            if (isInit) {
+                data = JSON.parse(attributeData);
+            }
+            attribute.makeDetails(object.value, data);
         }
 
         function emptyCheck() {
