--- a/src/main/resources/public/template/cmdb/attributeView.html
+++ b/src/main/resources/public/template/cmdb/attributeView.html
@@ -65,7 +65,23 @@
 </th:block>
 </body>
 <th:block layout:fragment="pageScript">
+    <script th:src="@{/assets/js/workflow/workflow.util.js}"></script>
+    <script th:src="@{/assets/js/cmdb/cmdb.core.js}"></script>
     <script th:src="@{/assets/js/cmdb/cmdb.attribute.js}"></script>
+    <script type="text/javascript">
+        (function() {
+            cmdb.initSession(JSON.stringify({
+                userKey : '[[${#authentication.details.userKey}]]',
+                userId : '[[${#authentication.details.userId}]]',
+                userName: '[[${#authentication.details.userName}]]',
+                email: '[[${#authentication.details.email}]]',
+                position: '[[${#authentication.details.position}]]',
+                department: '[[${#authentication.details.department}]]',
+                officeNumber: '[[${#authentication.details.officeNumber}]]',
+                mobileNumber: '[[${#authentication.details.mobileNumber}]]'
+            }));
+        })();
+    </script>
     <script type="text/javascript" th:inline="javascript">
         /*<![CDATA[*/
         window.onload = function () {
@@ -80,6 +96,11 @@
                 }
                 attributeTypeObject.add(option);
             }
+
+            // Attribute Details
+            attribute.init(document.querySelector('#details'));
+            changeType(attributeTypeObject, true);
+
             aliceJs.initDesignedSelectTag();
 
             OverlayScrollbars(document.querySelectorAll('.edit'), { className: 'scrollbar' });
@@ -94,6 +115,14 @@
                 }
             });
         };
+
+        function changeType(object, isInit) {
+            let data = null;
+            if (isInit) {
+                data = JSON.parse(attributeData);
+            }
+            attribute.makeDetails(object.value, data);
+        }
         /*]]>*/
     </script>
 </th:block>
