--- a/src/main/resources/public/template/layout/fragments/commonHead.html
+++ b/src/main/resources/public/template/layout/fragments/commonHead.html
@@ -24,6 +24,8 @@
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
     <script th:src="@{/assets/js/util/validation-alice.js}"></script>
     <script th:src="@{/assets/js/util/tree-alice.js}"></script>
+    <script th:src="@{/assets/vendors/highCharts/highcharts.js}"></script>
+    <script th:src="@{/assets/vendors/highCharts/highcharts.src.js}"></script>
     <script type="text/javascript">
         /*<![CDATA[ */
 
